<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/some_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/some_id" >


    <RelativeLayout
        android:id="@+id/form"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/form1">

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:singleLine="true"
            android:textAppearance="@style/email"
            android:background="@android:color/transparent"
            />



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form2"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/form1" >

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:hint="@string/password"
            android:singleLine="true"
            android:textAppearance="@style/password"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            />



    </RelativeLayout>


    <TextView
        android:id="@+id/create_a_fo"
        android:layout_width="249dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="544dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="121dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="Create FoT Account Sign-uo"
        android:textAppearance="@style/create_a_fo" />



    <TextView
        android:id="@+id/login1"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="170dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="Login"
        android:textAppearance="@style/login" />


    <RelativeLayout
        android:id="@+id/principal"
        android:layout_width="263dp"
        android:layout_height="54dp"
        android:layout_marginTop="482dp"
        android:layout_marginLeft="76dp"
        android:background="@drawable/principal"
        android:elevation="2.21dp" >

        <View
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/loginbg"
            />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Login"
            android:textAppearance="@style/sign_up" />

    </RelativeLayout>

</RelativeLayout>

